# ai-defra-search-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  README.md  compose.real-bedrock.yml  compose.test-frontend.yaml  compose.yml  core.code-workspace  pyproject.toml  pyrightconfig.json
.agents/rules/: ai-agnosticism.md
.agents/skills/create-skill/: SKILL.md
.agents/skills/review-docs/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
localstack-init/ready.d/: 01-create-sqs-queue.sh  02-cdp-uploader-setup.sh  02-create-knowledge-upload-bucket.sh  03-cdp-uploader-setup.sh
scripts/: clone.py  localstack_list.py  pull.py  update.py
service-compose/: ai-defra-search-agent.yml  ai-defra-search-aws-bedrock-stub.yml  ai-defra-search-chunking-etl.yml  ai-defra-search-data.yml  ai-defra-search-frontend.yml  ai-defra-search-journey-tests.yml  ai-defra-search-knowledge.yml  ai-defra-search-perf-tests.yml  cdp-uploader.yml
traefik/: dynamic.yml
