[project]
name = "ai-defra-search-core"
version = "1.0.0"
description = "Repository to support local development of AI Defra Search Microservices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff==0.14.3",
    "taskipy==1.14.1",
]

[tool.taskipy.tasks]
clone = "python scripts/clone.py"
pull = "python scripts/pull.py"
update = "python scripts/update.py"