[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project]
name = "ai-defra-search-core"
version = "1.0.0"
description = "Repository to support local development of AI Defra Search Microservices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "ruff==0.14.3",
    "taskipy==1.14.1",
    "typer>=0.12",
    "ai-defra-search-data",
]

[tool.uv.sources]
ai-defra-search-data = { path = "services/ai-defra-search-data" }

[project.scripts]
localstack = "scripts.localstack_list:app"

[tool.taskipy.tasks]
clone = "python scripts/clone.py"
pull = "python scripts/pull.py"
update = "python scripts/update.py"
localstack = "localstack"